--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/scharan005/Backend.git"
   },
-  "author": "",
+  "author": "Sri Charan Ponnada",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/scharan005/Backend/issues"
